--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-toastify": "^9.1.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
-    "yup": "^1.1.1"
+    "yup": "^1.1.1",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.4"
